--- a/mixed_models/MMRM_SAS_versus_R.Rmd
+++ b/mixed_models/MMRM_SAS_versus_R.Rmd
@@ -1,176 +1,123 @@
 ---
-title: "MMRM - SAS versus R"
-output: html_document
+title: "Fitting a Mixed Model for Repeated Measures using SAS and R"
+output:
+  word_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+plots <- readRDS("./plots/plots.rds")
 ```
 
 ## Introduction
-This document focuses on a comparison of results generated using a Mixed Model for Repeated Measures in SAS and R. Data for the comparison was the lab ADaM dataset adlbh.xpt from the Phuse Pilot Study. Results were generated for each lab parameter and time point in the dataset using three different covariance structures, i.e. unstructured, compound symmetry and autoregressive of first order (AR(1)).
 
-## SAS code
-In SAS the following code was used (assessments at avisitn=0 should also be removed from the response variable):
-<pre><code>
+This document focuses on a comparison of results generated using a Mixed Model for Repeated Measures (MMRM) in SAS and R. Data for the comparison was the lab ADaM dataset adlbh.xpt from the Phuse Pilot Study. Results were generated for each lab parameter and time point in the dataset using three different covariance structures, i.e. unstructured, compound symmetry and autoregressive of first order (AR(1)).
+
+## Fitting the MMRM in SAS
+
+In SAS the following code was used (assessments at `avisitn=0` should also be removed from the response variable):
+
+```{r, eval = FALSE, echo = TRUE}
 proc mixed data=adlbh;
-  where base ne . and avisitn not in (., 99);
-  class usubjid trtpn(ref="0") avisitn;
-  by paramcd param;
-  model chg=base trtpn avisitn  trtpn*avisitn / solution cl alpha=0.05 ddfm=KR;
-  repeated avisitn/subject=usubjid type=&covar;
-  lsmeans trtpn * avisitn / diff cl slice=avisitn;
-  lsmeans trtpn / diff cl;
+where base ne . and avisitn not in (., 99);
+class usubjid trtpn(ref="0") avisitn;
+by paramcd param;
+model chg=base trtpn avisitn  trtpn*avisitn / solution cl alpha=0.05 ddfm=KR;
+repeated avisitn/subject=usubjid type=&covar;
+lsmeans trtpn * avisitn / diff cl slice=avisitn;
+lsmeans trtpn / diff cl;
 run;
-</code></pre>
-
-where the macro variable covar could be UN, CS or AR(1). The results were stored in .csv files that were post-processed in R and compared with the results from R.
-
-## R code using the gls function
-The code below implements the MMRM using the gls function from the nlme package. Afterwards the emmeans package is used to get LSmeans estimates.
-
-<pre><code>
-### Unstructured
-mod1<-tryCatch(gls(model = CHG ~ TRTP + AVISITN + TRTP:AVISITN + AVISITN + BASE,
-                   data = adlbh_1,
-                   correlation = corSymm(form = ~1|SUBJID),
-                   weights = varIdent(form = ~1|AVISITN),
-                   control = glsControl(opt = "optim"),
-                   method = "REML",
-                   na.action = "na.omit"),
-                   error = function(x) return(NULL))
-
-### Compound symmetry
-mod1<-tryCatch(gls(model = CHG ~ TRTP + AVISITN + TRTP:AVISITN + AVISITN + BASE,
-                   data = adlbh_1,
-                   correlation = corCompSymm(form= ~ 1 | SUBJID),
-                   weights = varIdent(form = ~1|AVISITN),
-                   control = glsControl(opt = "optim"),
-                   method = "REML",
-                   na.action = "na.omit"),
-                   error = function(x) return(NULL))
-
-### AR(1)
-mod1<-tryCatch(gls(model = CHG ~ TRTP + AVISITN + TRTP:AVISITN + AVISITN + BASE,
-                   data = adlbh_1,
-                   correlation = corCAR1(form= ~ 1 | SUBJID),
-                   weights = varIdent(form = ~1|AVISITN),
-                   control = glsControl(opt = "optim"),
-                   method = "REML",
-                   na.action = "na.omit"),
-                   error = function(x) return(NULL))
-
-### Get LSmeans
-emmeans(mod1, ~TRTP|AVISITN, mode="df.error")
-emmeans::contrast(mod1, method="pairwise", adjust=NULL)
-
-</pre></code>
-
-## Comparison between SAS and R using the gls function
-We then graphically compared the results from SAS with the results from R using the gls function. 
-
-```{r, echo=FALSE}
-path<-"D:/working group/"
-path1<-"D:/working group/results_first/"
-from_R<-read.csv(paste0(path,"pair_diff.csv"))
-from_SAS<-read.csv(paste0(path1,"LSMeansDifferences_ANCOVAwithRepeatedMeasures_KR_ADLBH_GithubData.csv"))
-
-### Data manipulation of the SAS output 
-from_SAS$contrast<-paste(from_SAS$reftrtp,"-",from_SAS$TRTP)
-from_SAS$contrast[from_SAS$contrast=="Xanomeline High Dose - Xanomeline Low Dose"]<-"Xanomeline Low Dose - Xanomeline High Dose"
-from_SAS$VISIT<-toupper(from_SAS$AVISIT)
-from_SAS$corr<-from_SAS$covariatestructure
-from_SAS$corr[from_SAS$corr=="First Order Autoregressive"]<-"corCAR1"
-from_SAS$corr[from_SAS$corr=="Compound Symmetry"]<-"corCompSymm"
-from_SAS$corr[from_SAS$corr=="Unstructured"]<-"corSymm"
-from_SAS_1<-subset(from_SAS,corr %in% c("corCAR1","corCompSymm","corSymm"),select=c("PARAMCD","corr","contrast","VISIT","lsmeans_difference","lowerci95","upperci95"))
-
-### Data manipulation of the R output 
-from_R$VISIT<-paste("WEEK",from_R$AVISITN)
-from_R$upper<-from_R$upper.CL
-from_R$lower<-from_R$lower.CL
-for(i in 1:dim(from_R)[1]){
-  if(grepl("Placebo",from_R$contrast[i])){
-    from_R$estimate[i]<-(-1)*from_R$estimate[i]
-    from_R$lower[i]<-(-1)*from_R$upper.CL[i]
-    from_R$upper[i]<-(-1)*from_R$lower.CL[i]
-  }
-}
-
-from_R_1<-subset(from_R,select=c("PARAMCD","corr","contrast","VISIT","estimate","lower","upper"))
-
-### Merge with output from R (by paramcd, visit, correlation structure and contrast)
-temp01<-merge(from_SAS_1,from_R_1,by=c("PARAMCD","corr","contrast","VISIT"))
 ```
 
-We then plotted the estimates of the treatment effect against each other  
-```{r, echo=FALSE}
-par(cex=1.3)
-plot(temp01$lsmeans_difference,temp01$estimate,xlab="From SAS",ylab="From R",main="Estimates of treatment effect")
-lines(c(-10,15),c(-10,15),lty=2)
-points_to_plot<-subset(temp01,corr=="corCAR1")
-points(points_to_plot$lsmeans_difference,points_to_plot$estimate,pch=19,col="red")
-points_to_plot<-subset(temp01,corr=="corCompSymm")
-points(points_to_plot$lsmeans_difference,points_to_plot$estimate,pch=19,col="green")
-points_to_plot<-subset(temp01,corr=="corSymm")
-points(points_to_plot$lsmeans_difference,points_to_plot$estimate,pch=19,col="blue")
-legend("bottomright",c("AR(1)","Compound Symmetry","Unstructured"),col=c("red","green","blue"),pch=19)
+where the macro variable `covar` could be `UN`, `CS` or `AR(1)`. The results were stored in .csv files that were post-processed in R and compared with the results from R.
+
+## Fitting the MMRM in R
+
+### Using the `nlme::gls` function
+
+The code below implements an MMRM fit in R with the `nlme::gls` function.
+
+```{r, eval = FALSE, echo = TRUE}
+gls(model = CHG ~ TRTP + AVISITN + TRTP:AVISITN + AVISITN + BASE,
+    data = data,
+    correlation = corSymm(form = ~1|SUBJID),
+    weights = varIdent(form = ~1|AVISITN),
+    control = glsControl(opt = "optim"),
+    method = "REML",
+    na.action = "na.omit")
 ```
 
-The widths of the confidence intervals produced by SAS and R were also plotted aginst each other
+here we can swap out `corSymm` for `corCompSymm` to give the compound symmetry structure or `corCAR1` for autoregressive of first order (AR(1)).
 
-```{r, echo=FALSE}
-### Find width of 95% CI and compute summary statistics
-temp01$width_CI_SAS<-temp01$upperci95-temp01$lowerci95
-temp01$width_CI_R<-temp01$upper-temp01$lower
+### Using the `lme4::lmer` function
 
-### Plot width of 95% CI against each other
-par(cex=1.3)
-plot(c(0,50),c(0,50),type="l",lty=2,xlab="From SAS",ylab="From R",main="Width of 95% CI")
-points(temp01$width_CI_SAS,temp01$width_CI_R)
-points_to_plot<-subset(temp01,corr=="corCAR1")
-points(points_to_plot$width_CI_SAS,points_to_plot$width_CI_R,pch=19,col="red")
-points_to_plot<-subset(temp01,corr=="corCompSymm")
-points(points_to_plot$width_CI_SAS,points_to_plot$width_CI_R,pch=19,col="green")
-points_to_plot<-subset(temp01,corr=="corSymm")
-points(points_to_plot$width_CI_SAS,points_to_plot$width_CI_R,pch=19,col="blue")
-legend("bottomright",c("AR(1)","Compound Symmetry","Unstructured"),col=c("red","green","blue"),pch=19)
+An alternative way to fit an MMRM with unstructured covariance matrices is to use the `lme4::lmer` function as described by Daniel Sabanes Bove in his R in Pharma talk from 2020 see [here](https://github.com/rinpharma/2020_presentations/blob/main/talks_folder/2020-Sabanes_Bove-Implementing_MMRM_in_R.pdf). The relevance of this fit is apparent when we consider the availability of the Kenward-Roger's degrees of freedom for the MMRM in R, which at the time of writing, were not yet available for the `nlme::gls` function via the `pbkrtest` package (see [here](https://people.math.aau.dk/~sorenh/software/pbkrtest/#NEWS)).
+
+```{r, eval = FALSE, echo = TRUE}
+lmer(CHG ~ TRTA * VISIT + VISIT + BASE + (0 + VISIT|SUBJID),
+     data = data,
+     control = lmerControl(check.nobs.vs.nRE = "ignore"),
+     na.action = na.omit)
 ```
 
-## R code using the lmer function
-The repeated measures model with an unstructured covariance matrix can also be formulated as a random effect model and implemented using the lmer function from the lme4 package. This is shown below
+### Extracting effect estimates using `emmeans`
 
-<pre><code>
-mod1<-lmer(CHG ~ TRTP + AVISITN + TRTP:AVISITN + BASE + (0 + AVISITN | SUBJID),data=adlbh_1, control=lmerControl(check.nobs.vs.nRE="ignore"), na.action=na.omit)
-</pre></code>
+In order to extract relevant marginal means (LSmeans) and contrasts we can use the `emmeans` package. Below we start by constructing a `ref_grid` used to make explicit just how the predictions are generated across the levels of `TRTP` and `AVISITN`. The `emmeans` function permits various marginal means to be extracted depending on the `formula` provided and the following `pairs()` function call derives relevant contrasts. Note that more control can be obtained by calling the `contrast()` function.
 
-## Comparison between SAS and R using the lmer function
-We then graphically compared the results from SAS with the results from R using the lmer function. Again, estimates of treatment effect and width of confidence intervals were plotted against each other.
-
-```{r, echo=FALSE}
-### Compare with SAS
-final_1<-read.csv(paste0(path,"roche_diff.csv"))
-from_SAS_2<-subset(from_SAS_1,corr=="corSymm")
-temp02<-merge(from_SAS_2,final_1,by=c("PARAMCD","contrast","VISIT"))
-
-### Plot estimates against each other
-par(cex=1.3)
-plot(temp02$lsmeans_difference,temp02$estimate,xlab="From SAS",ylab="From R (Roche approach)",main="Estimates of treatment effect")
-lines(c(-10,15),c(-10,15),lty=2)
-
-### Find width of 95% CI and compute summary statistics
-temp02$width_CI_SAS<-temp02$upperci95-temp02$lowerci95
-temp02$width_CI_R<-temp02$upper-temp02$lower
-
-### Plot width of 95% CI against each other
-par(cex=1.3)
-plot(c(0,40),c(0,40),type="l",lty=2,xlab="From SAS",ylab="From R (Roche approach)",main="Width of 95% CI")
-points(temp02$width_CI_SAS,temp02$width_CI_R)
+```{r, eval = FALSE, echo = TRUE}
+mod_grid <- ref_grid(model, data = data, mode = "df.error")
+mod_emm <- emmeans(mod_grid, ~TRTP * AVISITN, mode = "df.error") 
+pairs(mod_emm) 
 ```
+
+## Comparison between SAS and R
+
+With results available for SAS and R model fits, we turn our attention to generating some visual comparisons of the results. Note that here we adopt a Bland-Altman type plot which plots the difference on the y-axis and the average on the x-axis. This offers a way to inspect any bias or relationships with the size of effect and the associated bias.
+
+For the extracted LS-means
+
+```{r, echo = FALSE, warning = FALSE, message = FALSE, out.width = "100%"}
+plots$lsmeans_bland_alt_emmean$`Unstructured (KR)`
+plots$lsmeans_bland_alt_emmean$`Unstructured (satterthwaite)`
+plots$lsmeans_bland_alt_emmean$`Heterogeneous Compound Symmetry`
+plots$lsmeans_bland_alt_emmean$`Heterogeneous First Order Autoregressive`
+```
+
+and corresponding SEs
+
+```{r, echo = FALSE, warning = FALSE, message = FALSE}
+plots$lsmeans_bland_alt_se$`Unstructured (KR)`
+plots$lsmeans_bland_alt_se$`Unstructured (satterthwaite)`
+plots$lsmeans_bland_alt_se$`Heterogeneous Compound Symmetry`
+plots$lsmeans_bland_alt_se$`Heterogeneous First Order Autoregressive`
+```
+
+For the derived contrasts
+
+```{r, echo = FALSE, warning = FALSE, message = FALSE}
+plots$contrasts_bland_alt_estimate$`Unstructured (KR)`
+plots$contrasts_bland_alt_estimate$`Unstructured (satterthwaite)`
+plots$contrasts_bland_alt_estimate$`Heterogeneous Compound Symmetry`
+plots$contrasts_bland_alt_estimate$`Heterogeneous First Order Autoregressive`
+```
+
+and corresponding 95%CI widths
+
+```{r, echo = FALSE, warning = FALSE, message = FALSE}
+plots$contrasts_bland_alt_ci$`Unstructured (KR)`
+plots$contrasts_bland_alt_ci$`Unstructured (satterthwaite)`
+plots$contrasts_bland_alt_ci$`Heterogeneous Compound Symmetry`
+plots$contrasts_bland_alt_ci$`Heterogeneous First Order Autoregressive`
+```
+
+## Analysis of SAS and R Comparison
+
+Using SAS PROC MIXED and R functions such as gls, lmer, mod_grid, and mod_emm, results were broadly aligned. Results not being exact can be attributed to many factors such as rounding precision, data handling, and many other internal processing nuances.  However, Bland-Altman type plots showed small but randomly distributed differences across a broad range of parameters from the input data.  Apart from a small subset of the parameters, there were no trends observed which would have suggested systemic differences between the languages.  These analyses were based on a single set of data so more research must be done. However, based on comparing R documentation with SAS documentation, as well as the results displayed above in this paper, it is evident that the R and the SAS methods cover do produce similarly valid results for the options which were tested.
 
 ## Future work
-+ Run SAS code by also removing assessments at avisitn=0 from the response variable, and using trtp (or trtpn) and avisit (or avisitn)
-+ Investigating the differences
-+ Implement lmer equivalent to MMRM with compound symmetry
-+ Comparisons for other models, i.e. only random, random and repeated, no repeated
 
+-   Run SAS code by also removing assessments at `avisitn=0` from the response variable, and using `trtp` (or `trtpn`) and `avisit` (or `avisitn`)
+-   Investigating the differences
+-   Implement `lmer` equivalent to MMRM with compound symmetry
+-   Comparisons for other models, i.e. only random, random and repeated, no repeated
